test/good/localscopes.iml
type a = A
type b = B
type c = C
;;

let x =
  let ?p = A in
  (? : a) in
let y =
  let ?q = A in
  (? : a) in
A
