test/bad/ambiguous.iml
type a = A
;;
let ?p = A in
let ?q = A in
let x = (? : a) in
A
